<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_desert</name>
  <version>1.0.1</version>
  <description>Implement the ROS middleware interface using the DESERT protocol stack for underwater communications.</description>
  <maintainer email="davide.cst00@gmail.com">Davide Costa</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>rmw</build_depend>
  <build_depend>rmw_dds_common</build_depend>
  <build_depend>rosidl_runtime_c</build_depend>
  <build_depend>rosidl_typesupport_introspection_c</build_depend>
  <build_depend>rosidl_typesupport_introspection_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rcpputils</build_depend>

  <build_export_depend>rmw</build_export_depend>
  <build_export_depend>rmw_dds_common</build_export_depend>
  <build_export_depend>rosidl_runtime_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_introspection_cpp</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>
  <build_export_depend>rcpputils</build_export_depend>

  <exec_depend>rmw</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>rosidl_typesupport_introspection_c</exec_depend>
  <exec_depend>rosidl_typesupport_introspection_cpp</exec_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
